<resources>
    <string name="app_name">Paw</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="dummy_title">Lorem Ipsum</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_subtitle">Please fill in below to
        <font color="#FDC761"><b> sign up</b></font>
    </string>
    <string name="full_name_edit_text">FULL NAME</string>
    <string name="email_edit_text">EMAIL</string>
    <string name="password_edit_text">PASSWORD</string>
    <string name="confirm_password_edit_text">CONFIRM PASSWORD</string>
    <string name="sign_up_question">
        Already have an account?
        <font color="#FDC761"><b> Sign in</b></font>
    </string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_subtitle">
        Please
        <font color="#FDC761"><b> Sign in </b></font>
        to continue
    </string>
    <string name="sign_in_question">
        Don\'t have an account?
        <font color="#FDC761"><b> Sign up</b></font>
    </string>
    <string name="sign_in_forgot_password">Forgot password?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_subtitle">
        Please enter your registered email below and we will send you a link to
        <font color="#FDC761"><b> reset your password</b></font>
    </string>
    <string name="send_email">Send Email</string>
    <string name="forgot_password_question">
        Back to
        <font color="#FDC761"><b> sign in</b></font>
    </string>
    <string name="dashboard">Dashboard</string>
    <string name="article">Article</string>
    <string name="vet">Vet</string>
    <string name="food">Food</string>
    <string name="profile">Profile</string>
    <string name="full_name">Full Name</string>
    <string name="dummy_email">user@email.com</string>
    <string name="dummy_name">User</string>
    <string name="sign_out">Sign Out</string>
    <string name="search_vet">Search vet</string>
    <string name="search_food">Search food</string>
    <string name="search_article">Search article</string>
    <string name="price">Price</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="location">Location</string>
    <string name="name">Name</string>
    <string name="brand">Brand</string>
    <string name="category">Category</string>
    <string name="error_sign_in">Name or password can\'t be empty!</string>
    <string name="success_sign_in">Sign in success!</string>
    <string name="failed_sign_in">Sign in failed!</string>
    <string name="error_email">Email can\'t be empty!</string>
    <string name="reset_forgot_password">Please check your email to reset password</string>
    <string name="failed_forgot_password">Failed to reset password</string>
    <string name="error_sign_up">Sign up failed</string>
    <string name="user">User</string>
    <string name="error_name">Name can\'t be empty!</string>
    <string name="error_password_sign_up">Password can\'t be empty!</string>
    <string name="error_confirm_password_sign_up">Password doesn\'t match!</string>
    <string name="all">All</string>
    <string name="cat">Cat</string>
    <string name="dog">Dog</string>
    <string name="bird">Bird</string>
    <string name="fish">Fish</string>
    <string name="rabbit">Rabbit</string>
    <string name="birb">Birb</string>
    <string name="description">Description</string>
    <string name="descdummy">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </string>
    <string name="how_to_take_care">How To Take Care</string>
    <string name="onbs1">Read articles about your pet and learn how to properly take care of it!</string>
    <string name="onbt1">Monitor</string>
    <string name="onbt2">Care</string>
    <string name="onbs2">Take care of your pets by easily look up for veterinarian nearby!</string>
    <string name="onbt3">Easy</string>
    <string name="onbs3">Easily sit back and learn about your pet at home and don’t forget to buy them snacks!</string>
    <string name="vetname">drh. Anggi Anggini</string>
    <string name="vethos">North Animal Clinic</string>
    <string name="information">Information</string>
    <string name="practical_schedule">Practical Schedule</string>
    <string name="detailoc">North Jakarta, Indonesia</string>
    <string name="harga">Rp. 200.000,00</string>
    <string name="preference">Preference</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="recommended_articles">Recommended Articles</string>
    <string name="show_all">Show All</string>
    <string name="recommended_foods">Recommended Foods</string>
    <string name="search_here">Search here...</string>
    <string name="imagebutton">imageButton</string>
    <string name="imageview">imageView</string>
    <string name="composition">Composition</string>
    <string name="shortdesc">Lorem ipsum dolor sit amet</string>
    <string name="search_hint">Search article</string>
    <string name="button_next">Next</string>
    <string name="button_start">Start</string>
    <string name="shop">Shop</string>
    <string name="button_shop">SHOP</string>
    <string name="make_appointment">MAKE APPOINTMENT</string>
    <string name="price_30">Rp.30.000,00</string>
    <string name="food_brand">Food Brand</string>
    <string name="food_subtitle">Food Subtitle</string>
    <string name="choose_a_date">Choose a date</string>
    <string name="appointment_set">Appointment Set!</string>
    <string name="appointment_dialog">Your appointment has been set. Please press the “OK” button to continue.</string>
    <string name="ok">OK</string>
    <string name="loading">Loading...</string>
    <string-array name="sch_array">
        <item>Monday,April 25 2022</item>
        <item>Wednesday,April 27 2022</item>
        <item>Saturday,April 30 2022</item>
        <item>Sunday,May 1 2022</item>
    </string-array>
</resources>