<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:padding="@dimen/_20sdp"
    tools:context=".activity.authentication.ForgotPasswordActivity">

    <TextView
        android:id="@+id/tvTitleForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:includeFontPadding="false"
        android:text="@string/forgot_password"
        android:textColor="@color/yellow"
        android:textSize="@dimen/_36ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSubtitleForgotPassword"
        style="@style/TextStyleMedium14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:text="@string/forgot_password_subtitle"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/tvTitleForgotPassword"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleForgotPassword" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etlEmailForgotPassword"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubtitleForgotPassword"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/yellow">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmailForgotPassword"
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_edit_text" />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnForgotPassword"
        style="@style/ButtonActive"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:text="@string/send_email"
        app:layout_constraintBottom_toTopOf="@id/tvQuestionForgotPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvQuestionForgotPassword"
        style="@style/TextStyleMedium14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:text="@string/forgot_password_question"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>