<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.vet.VetDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rlVetDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivVetDetail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/ivBackVet"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_alignTop="@id/ivVetDetail"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/background_back_button"
                app:srcCompat="@drawable/ic_arrow_back_white" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvNameVetDetail"
            style="@style/TextStyleBold18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlVetDetail"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="start"
            android:text="@string/vetname"
            android:textColor="@color/black32" />

        <TextView
            android:id="@+id/tvLocationVetItem"
            style="@style/TextStyleSemiBold14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvNameVetDetail"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/vethos"
            android:textColor="@color/black32" />

        <TextView
            android:id="@+id/tvLocationVetDetail"
            style="@style/TextStyleMedium12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvLocationVetItem"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:text="@string/detailoc"
            android:textColor="@color/black50" />

        <TextView
            android:id="@+id/tvPriceVetDetail"
            style="@style/TextStyleSemiBold14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvLocationVetDetail"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/harga"
            android:textColor="@color/green" />

        <TextView
            android:id="@+id/tvInformationTitleVetDetail"
            style="@style/TextStyleSemiBold14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPriceVetDetail"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/information"
            android:textColor="@color/black32" />

        <TextView
            android:id="@+id/tvInformationVetDetail"
            style="@style/TextStyleMedium12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvInformationTitleVetDetail"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/descdummy"
            android:textColor="@color/black50" />

        <TextView
            android:id="@+id/tvScheduleTitleVetDetail"
            style="@style/TextStyleSemiBold14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvInformationVetDetail"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/practical_schedule"
            android:textColor="@color/black32" />

        <AutoCompleteTextView
            android:id="@+id/scheduleSpinnerVetDetail"
            style="@style/TextStyleMedium14"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@+id/tvScheduleTitleVetDetail"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/spinner_background"
            android:cursorVisible="false"
            android:drawableEnd="@drawable/ic_dropdown"
            android:focusableInTouchMode="false"
            android:hint="@string/choose_a_date"
            android:longClickable="false"
            android:paddingHorizontal="@dimen/_10sdp"
            android:popupBackground="@drawable/spinner_popup_background"
            android:textColorHint="@color/black70" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAppointment"
            style="@style/ButtonActiveGreen"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@+id/scheduleSpinnerVetDetail"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/btn_green_bg"
            android:text="@string/make_appointment" />

    </RelativeLayout>

</ScrollView>












